[drm][i915]: fix blinking display

Since commit 36a0f92020dc8794d3aa69b7fb4c5d2bf99b0099, GDM login
manager screen won't show up. Display is blinking.

This fix kindly revert that commit.

bugzila: https://bugs.freedesktop.org/show_bug.cgi?id=111966